Adding Google Analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -127,4 +127,8 @@
   {% include matomo.html %}
   {% endif %}
 
+{% if site.google_analytics and jekyll.environment == 'production' %}
+{% include analytics.html %}
+{% endif %}
+
 </head>
