--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,12 +1,9 @@
-<html>
-<head>
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-4CPYC6Y783"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
-  gtag('config', '{{ site.google_analytics }}');
+
+  gtag('config', 'G-4CPYC6Y783');
 </script>
-</head>
-</html>
